SERVER-34102 Fix to prevent race between _handleTimePassing (stepdown timeout) and _startElectSelfIfEligibleV1 (election timeout) for pv1 single node replica set case.