src/mongo/db/repl/topology_coordinator.h
@@ -705,7 +705,8 @@ public:
         kElectionTimeout,
         kPriorityTakeover,
         kStepUpRequest,
-        kCatchupTakeover
+        kCatchupTakeover,
+        kSingleNodeStepDownTimeout
     };
 
     /**
